# BackTesting

./: .gitignore  CMakeLists.txt  README.md
src/: backTest.cpp  backTest.hpp  dataHandler.cpp  dataHandler.hpp  event.hpp  main.cpp  types.hpp
src/strategies/: movingAverage.cpp  movingAverage.hpp  strategies.hpp
